fixed: smootherr run up stairs, map, issues with sidebar, very small jump, visitor can't fall down - blocked by transparent walls.

--- a/main.css
+++ b/main.css
@@ -396,7 +396,7 @@ li.text_in_sidebar.open canvas.open {
   background-color: #142236;
   color: rgb(156, 183, 196);
   font-size: normal;
-  height: 23em;
+  height: 33em;
   overflow: auto;
   padding-left: 1em;
 
